acceptance-tests/src/test/resources/tests/errors/module_and_class_collision/default_arguments/generates_overload_with_no_parameters.swift
let a: Kotlin_ = Kotlin_()

let result = a.foo()

exit(result)
